k8s/13-evaluation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: togglemaster
  labels:
    app: evaluation-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          # TODO: troque pela URI da imagem no seu ECR
          image: SUA_CONTA_AWS.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:latest
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: "40m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
